--- a/styles/style.css
+++ b/styles/style.css
@@ -152,40 +152,79 @@ form {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
+  width: 90%;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start; }
   form h3 {
     width: 100%; }
+  form div {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    margin: 5px 0; }
+    form div input[type="radio"] {
+      opacity: 0.5; }
+    form div input[type="radio"] ~ label {
+      opacity: 0.5;
+      margin: 5px;
+      padding: 5px;
+      border: 2px solid transparent;
+      text-align: left;
+      -webkit-transition: all 1s;
+      -o-transition: all 1s;
+      transition: all 1s; }
+    form div input[type="radio"] ~ label:hover {
+      opacity: 0.8;
+      border: 2px solid transparent; }
+    form div input[type="radio"]:active ~ label {
+      opacity: 0.8;
+      border: 2px solid transparent; }
+    form div input[type="radio"]:checked ~ label {
+      opacity: 1;
+      border-bottom: 2px solid #000; }
 
 .podcastResult {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
-  .podcastResult ul {
-    width: 100%;
-    padding-left: 0; }
-  .podcastResult ul li {
-    list-style: none;
-    text-transform: capitalize; }
+  flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  text-align: left;
+  margin: 25px auto;
+  background: rgba(211, 197, 197, 0.8);
+  border: 2px solid #000; }
+  .podcastResult div {
+    width: 45%; }
+  .podcastResult p {
+    text-transform: capitalize;
+    display: none;
+    width: 100%; }
+  .podcastResult div:nth-child(2) {
+    width: 20%; }
 
 body {
-  background: #9b30ff;
   color: #fff;
-  font-family: 'Roboto Condensed', sans-serif; }
+  font-family: 'Roboto Condensed', sans-serif;
+  background: url(../assets/juja-han-210775.jpg) no-repeat center center fixed;
+  background-size: cover;
+  position: relative; }
+
+.bgOpacity {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1; }
 
 .wrapper {
   max-width: 1170px;
@@ -203,6 +242,14 @@ body {
 button {
   width: 200px;
   height: 50px;
-  background: #9b30ff;
-  color: #fff;
-  border-radius: 10%; }
+  color: #000;
+  background: #darkgrey;
+  border: 2px solid black;
+  -webkit-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+  margin: 5px auto; }
+  button:hover {
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border: 2px solid white; }
