--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,9 +13,23 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 @import "components/result";
 
 body {
-    background: #9b30ff;
     color: #fff;
     font-family: 'Roboto Condensed', sans-serif;
+    background: url(../assets/juja-han-210775.jpg) no-repeat center center fixed;
+    background-size: cover;
+    position: relative;
+    // height: 100vh;
+}
+
+.bgOpacity {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0,0,0,0.5);
+    position: fixed;
+    top:0;
+    left:0;
+    z-index:-1;
 }
 
 .wrapper {
@@ -30,7 +44,16 @@ body {
 button {
     width: 200px;
     height: 50px;
-    background: #9b30ff;
-    color: #fff;
-    border-radius: 10%;
+    color: #000;
+    background: #darkgrey;
+    border: 2px solid black;
+    transition: all 1s;
+    margin: 5px auto;
+    &:hover {
+        background: rgba(0,0,0,0.8);
+        color: #fff;
+        border: 2px solid white;
+    }
+    
 }
+
