--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -1,3 +1,5 @@
+//styles for main questions
+
 form {
     display: flex;
     flex-wrap: wrap;
@@ -15,7 +17,7 @@ form {
         margin: 5px 0;
 
     input[type="radio"] {
-        opacity: 0.5;
+        opacity: 0.9;
     }
 
      input[type="radio"] ~ label {
@@ -25,16 +27,17 @@ form {
         border: 2px solid transparent;
         text-align: left;
         transition: all 1s;
+        @include remCalc(18);
     }
 
     input[type="radio"] ~ label:hover {
-        opacity: 0.8;
+        opacity: 0.9;
         border: 2px solid transparent;
     }
 
 
     input[type="radio"]:active ~ label {
-        opacity: 0.8;
+        opacity: 0.9;
         border: 2px solid transparent;
     }
 
@@ -43,5 +46,57 @@ form {
         border-bottom: 2px solid #000;
     }
     } 
+
+}
+
+
+/* Portrait tablet and small desktops */
+@media (max-width: 940px) {
+}
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+    input[type="radio"] ~ label {
+         @include remCalc(16);
+    }
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+         input[type="radio"] ~ label {
+        opacity: 1;     
+        margin: 3px;
+        padding: 3px;
+        border: 2px solid transparent;
+        text-align: left;
+        color: #fff;
+        @include remCalc(16);
+    }
+
+    input[type="radio"] {
+        opacity: 0;
+    }
+
+
+
+    input[type="radio"]:active ~ label {
+        color: #fff;
+        border: 2px solid transparent;
+        opacity: 0;
+    }
+
+        input[type="radio"] ~ label:hover {
+        opacity: 0;
+        border: none;
+        color: #fff;
+    }
+
+
+
+    input[type="radio"]:checked ~ label {
+        opacity: 0;
+        border-bottom: none;
+        color: #fff;
+    }
 
 }
