--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -5,6 +5,7 @@ form {
     flex-wrap: wrap;
     width: 90%;
     justify-content: flex-start;
+    align-items: center;
     
     h3  {
         width: 100%;
@@ -14,7 +15,8 @@ form {
         width:100%;
         display: flex;
         justify-content: flex-start;
-        margin: 5px 0;
+        align-items: center;
+        margin: 0px 0;
 
     input[type="radio"] {
         opacity: 0.9;
@@ -23,7 +25,7 @@ form {
      input[type="radio"] ~ label {
         opacity: 0.5;
         margin: 5px;
-        padding: 5px;
+        padding:  0 5px;
         border: 2px solid transparent;
         text-align: left;
         transition: all 1s;
