--- a/styles/style.css
+++ b/styles/style.css
@@ -162,7 +162,10 @@ form {
   width: 90%;
   -webkit-box-pack: start;
   -ms-flex-pack: start;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
   form h3 {
     width: 100%; }
   form div {
@@ -173,13 +176,16 @@ form {
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: flex-start;
-    margin: 5px 0; }
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 0px 0; }
     form div input[type="radio"] {
       opacity: 0.9; }
     form div input[type="radio"] ~ label {
       opacity: 0.5;
       margin: 5px;
-      padding: 5px;
+      padding: 0 5px;
       border: 2px solid transparent;
       text-align: left;
       -webkit-transition: all 1s;
