--- a/styles/style.css
+++ b/styles/style.css
@@ -321,6 +321,19 @@ button {
     color: #fff;
     border: 2px solid white; }
 
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 150px;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -ms-flex-line-pack: end;
+  align-content: flex-end;
+  font-size: 1rem;
+  width: 100%; }
+
 /* Portrait tablet and small desktops */
 /* Landscape phone to portrait tablet */
 /* Landscape phones and down */
