--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,6 +11,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 @import "components/header";
 @import "components/form";
 @import "components/result";
+@import "components/radiostyle";
 
 //general styles
 
