--- a/styles/style.css
+++ b/styles/style.css
@@ -167,7 +167,8 @@ form {
   -ms-flex-align: center;
   align-items: center; }
   form h3 {
-    width: 100%; }
+    width: 100%;
+    font-size: 1.5rem; }
   form div {
     width: 100%;
     display: -webkit-box;
@@ -176,63 +177,42 @@ form {
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: flex-start;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    margin: 0px 0; }
+    -webkit-box-align: baseline;
+    -ms-flex-align: baseline;
+    align-items: baseline;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 5px; }
+    form div .quizANS {
+      width: 5%; }
+    form div .question {
+      width: 95%;
+      font-size: 1.25rem;
+      text-align: left; }
     form div input[type="radio"] {
-      opacity: 0.9; }
+      margin-right: 5px; }
     form div input[type="radio"] ~ label {
-      opacity: 0.5;
       margin: 5px;
       padding: 0 5px;
-      border: 2px solid transparent;
       text-align: left;
       -webkit-transition: all 1s;
       -o-transition: all 1s;
       transition: all 1s;
-      font-size: 1.125rem; }
+      font-size: 1.25rem; }
     form div input[type="radio"] ~ label:hover {
-      opacity: 0.9;
-      border: 2px solid transparent; }
+      color: white; }
     form div input[type="radio"]:active ~ label {
-      opacity: 0.9;
-      border: 2px solid transparent; }
+      color: white; }
     form div input[type="radio"]:checked ~ label {
-      opacity: 1;
-      border-bottom: 2px solid #000; }
+      color: white; }
 
 /* Portrait tablet and small desktops */
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  input[type="radio"] ~ label {
+  form div input[type="radio"] ~ label {
     font-size: 1rem; } }
 
 /* Landscape phones and down */
-@media (max-width: 480px) {
-  input[type="radio"] ~ label {
-    opacity: 1;
-    margin: 3px;
-    padding: 3px;
-    border: 2px solid transparent;
-    text-align: left;
-    color: #fff;
-    font-size: 1rem; }
-  input[type="radio"] {
-    opacity: 0; }
-  input[type="radio"]:active ~ label {
-    color: #fff;
-    border: 2px solid transparent;
-    opacity: 0; }
-  input[type="radio"] ~ label:hover {
-    opacity: 0;
-    border: none;
-    color: #fff; }
-  input[type="radio"]:checked ~ label {
-    opacity: 0;
-    border-bottom: none;
-    color: #fff; } }
-
 .podcastResult {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -275,6 +255,82 @@ form {
 @media (max-width: 480px) {
   p {
     font-size: 1rem; } }
+
+@-webkit-keyframes click-wave {
+  0% {
+    height: 40px;
+    width: 40px;
+    opacity: 0.35;
+    position: relative; }
+  100% {
+    height: 200px;
+    width: 200px;
+    margin-left: -80px;
+    margin-top: -80px;
+    opacity: 0; } }
+
+@keyframes click-wave {
+  0% {
+    height: 40px;
+    width: 40px;
+    opacity: 0.35;
+    position: relative; }
+  100% {
+    height: 200px;
+    width: 200px;
+    margin-left: -80px;
+    margin-top: -80px;
+    opacity: 0; } }
+
+.option-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  -webkit-transition: all 0.15s ease-out 0s;
+  -o-transition: all 0.15s ease-out 0s;
+  transition: all 0.15s ease-out 0s;
+  background: #cbd1d8;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 0.5rem;
+  outline: none;
+  position: relative;
+  z-index: 1000; }
+
+.option-input:hover {
+  background: #9faab7; }
+
+.option-input:checked {
+  background: purple; }
+
+.option-input:checked::after {
+  -webkit-animation: click-wave 0.65s;
+  animation: click-wave 0.65s;
+  background: purple;
+  content: '';
+  display: block;
+  position: relative;
+  z-index: 100; }
+
+.option-input.radio {
+  border-radius: 50%; }
+
+.option-input.radio::after {
+  border-radius: 50%; }
+
+@media (max-width: 768px) {
+  .option-input {
+    height: 15px;
+    width: 15px; } }
 
 body {
   color: #fff;
