--- a/styles/components/_radiostyle.scss
+++ b/styles/components/_radiostyle.scss
@@ -1,66 +1,46 @@
-@keyframes click-wave {
-  0% {
-    height: 40px;
-    width: 40px;
-    opacity: 0.35;
-    position: relative;
-  }
-  100% {
-    height: 200px;
-    width: 200px;
-    margin-left: -80px;
-    margin-top: -80px;
-    opacity: 0;
-  }
+input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
 }
-
-.option-input {
-  appearance: none;
+label {
   position: relative;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 20px;
-  width: 20px;
-  transition: all 0.15s ease-out 0s;
-  background: #cbd1d8;
-  border: none;
-  color: #fff;
-  cursor: pointer;
   display: inline-block;
-  margin-right: 0.5rem;
-  outline: none;
-  position: relative;
-  z-index: 1000;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 10px;
+  line-height: 36px;
+  cursor: pointer;
 }
-.option-input:hover {
-  background: #9faab7;
-}
-.option-input:checked {
-  background: purple;
-}
-
-.option-input:checked::after {
-  animation: click-wave 0.65s;
-  background: purple;
-  content: '';
+label::before {
+  content: " ";
+  position: absolute;
+  top: 6px;
+  left: 0;
   display: block;
-  position: relative;
-  z-index: 100;
+  width: 24px;
+  height: 24px;
+  border: 2px solid white;
+  border-radius: 4px;
+  z-index: -1;
 }
-.option-input.radio {
-  border-radius: 50%;
+input[type="radio"] + label::before {
+  border-radius: 18px;
 }
-.option-input.radio::after {
-  border-radius: 50%;
+/* Checked */
+input[type="radio"]:checked + label {
+  padding-left: 10px;
+  color: white;
 }
-
-
-@media (max-width: 768px) {
-.option-input {
-  height: 15px;
-  width: 15px;
-
-    }
+input[type="radio"]:checked + label::before {
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+}
+/* Transition */
+label,
+label::before {
+  transition: .25s all ease;
 }
