--- a/styles/components/_result.scss
+++ b/styles/components/_result.scss
@@ -9,6 +9,7 @@
     margin: 25px auto;
     background: rgba(211, 197, 197, 0.8);
     border: 2px solid #000;
+    border-radius: 1.25em;
 
     div {
         width: 45%;
