--- a/styles/style.css
+++ b/styles/style.css
@@ -160,12 +160,18 @@ form {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 90%;
+  margin: 15px auto;
   -webkit-box-pack: start;
   -ms-flex-pack: start;
   justify-content: flex-start;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  color: white;
+  background: -webkit-linear-gradient(20deg, transparent, lightgray);
+  background: -o-linear-gradient(20deg, transparent, lightgray);
+  background: linear-gradient(70deg, transparent, lightgray);
+  border-radius: 1.25em; }
   form h3 {
     width: 100%;
     font-size: 1.5rem; }
@@ -189,30 +195,7 @@ form {
       width: 95%;
       font-size: 1.25rem;
       text-align: left; }
-    form div input[type="radio"] {
-      margin-right: 5px; }
-    form div input[type="radio"] ~ label {
-      margin: 5px;
-      padding: 0 5px;
-      text-align: left;
-      -webkit-transition: all 1s;
-      -o-transition: all 1s;
-      transition: all 1s;
-      font-size: 1.25rem; }
-    form div input[type="radio"] ~ label:hover {
-      color: white; }
-    form div input[type="radio"]:active ~ label {
-      color: white; }
-    form div input[type="radio"]:checked ~ label {
-      color: white; }
 
-/* Portrait tablet and small desktops */
-/* Landscape phone to portrait tablet */
-@media (max-width: 768px) {
-  form div input[type="radio"] ~ label {
-    font-size: 1rem; } }
-
-/* Landscape phones and down */
 .podcastResult {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -224,7 +207,8 @@ form {
   text-align: left;
   margin: 25px auto;
   background: rgba(211, 197, 197, 0.8);
-  border: 2px solid #000; }
+  border: 2px solid #000;
+  border-radius: 1.25em; }
   .podcastResult div {
     width: 45%; }
   .podcastResult p {
@@ -256,81 +240,53 @@ form {
   p {
     font-size: 1rem; } }
 
-@-webkit-keyframes click-wave {
-  0% {
-    height: 40px;
-    width: 40px;
-    opacity: 0.35;
-    position: relative; }
-  100% {
-    height: 200px;
-    width: 200px;
-    margin-left: -80px;
-    margin-top: -80px;
-    opacity: 0; } }
+input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  z-index: -1; }
 
-@keyframes click-wave {
-  0% {
-    height: 40px;
-    width: 40px;
-    opacity: 0.35;
-    position: relative; }
-  100% {
-    height: 200px;
-    width: 200px;
-    margin-left: -80px;
-    margin-top: -80px;
-    opacity: 0; } }
-
-.option-input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+label {
   position: relative;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  height: 20px;
-  width: 20px;
-  -webkit-transition: all 0.15s ease-out 0s;
-  -o-transition: all 0.15s ease-out 0s;
-  transition: all 0.15s ease-out 0s;
-  background: #cbd1d8;
-  border: none;
-  color: #fff;
-  cursor: pointer;
   display: inline-block;
-  margin-right: 0.5rem;
-  outline: none;
-  position: relative;
-  z-index: 1000; }
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 10px;
+  line-height: 36px;
+  cursor: pointer; }
 
-.option-input:hover {
-  background: #9faab7; }
-
-.option-input:checked {
-  background: purple; }
-
-.option-input:checked::after {
-  -webkit-animation: click-wave 0.65s;
-  animation: click-wave 0.65s;
-  background: purple;
-  content: '';
+label::before {
+  content: " ";
+  position: absolute;
+  top: 6px;
+  left: 0;
   display: block;
-  position: relative;
-  z-index: 100; }
+  width: 24px;
+  height: 24px;
+  border: 2px solid white;
+  border-radius: 4px;
+  z-index: -1; }
 
-.option-input.radio {
-  border-radius: 50%; }
+input[type="radio"] + label::before {
+  border-radius: 18px; }
 
-.option-input.radio::after {
-  border-radius: 50%; }
+/* Checked */
+input[type="radio"]:checked + label {
+  padding-left: 10px;
+  color: white; }
 
-@media (max-width: 768px) {
-  .option-input {
-    height: 15px;
-    width: 15px; } }
+input[type="radio"]:checked + label::before {
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: black; }
+
+/* Transition */
+label,
+label::before {
+  -webkit-transition: .25s all ease;
+  -o-transition: .25s all ease;
+  transition: .25s all ease; }
 
 body {
   color: #fff;
@@ -371,7 +327,8 @@ button {
   -webkit-transition: all 1s;
   -o-transition: all 1s;
   transition: all 1s;
-  margin: 5px auto; }
+  margin: 5px auto;
+  border-radius: 1.25em; }
   button:hover {
     background: rgba(0, 0, 0, 0.8);
     color: #fff;
