--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,6 +21,7 @@ body {
     background: url(../assets/juja-han-210775.jpg) no-repeat center center fixed;
     background-size: cover;
     position: relative;
+  
 }
 
 .bgOpacity {
@@ -51,13 +52,14 @@ button {
     border: 2px solid black;
     transition: all 1s;
     margin: 5px auto;
+    border-radius: 1.25em;
     &:hover {
         background: rgba(0,0,0,0.8);
         color: #fff;
         border: 2px solid white;
     }
-    
 }
+
 
 footer {
     display: flex;
